Implemented GET request for sponsors
